# cpw-dbmanager

./: .gitignore  CMakeLists.txt  Config.h.in  Dockerfile  PULL_REQUEST_TEMPLATE.md  README.md  name-projectConfig.h.cmake  name-projectConfig.h.in  project.pc
cmake/: build_settings.cmake  conan.cmake  doxygen.cmake  files_install.cmake  general_options.cmake  print_informations.cmake  project_config.h.cmake
include/: access_data.h  address.h  column.h  connection.h  cpw_dbmanager.h  database.h  handle_database.h  library1.h  library2.h  mariadb_handler.h  mysql_handler.h  object_library.h  query.h  result.h  row.h  sqlite3_handler.h  table.h  url.h  user.h
include/handlers/: mariadb_handler.h  mysql_handler.h  sqlite3_handler.h
share/: CMakeLists.txt  project.desktop  project.desktop.in  project.pc.in
src/: CMakeLists.txt  access_data.cc  address.cc  class.cc  column.cc  connection.cc  cpw_dbmanager.cc  database.cc  handle_database.cc  library1.cc  library2.cc  main.cc  mariadb_handler.cc  mysql_handler.cc  object_library.cc  query.cc  result.cc  row.cc  sqlite3_handler.cc  table.cc  url.cc  user.cc
src/handlers/: CMakeLists.txt  mariadb_handler.cc  mysql_handler.cc  sqlite3_handler.cc
tests/: CMakeLists.txt  test_gen.cc
